{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 138,
  "lineage": "d2e75d0b-7f42-5e95-e767-d6b54e2e3993",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3",
            "arn_suffix": "app/asterra-demo-alb/743834815cb59af3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "asterra-demo-alb-1269054896.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asterra-demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e9400189dded844"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c5344a8a1e0348a"
              },
              {
                "subnet_id": "subnet-0cac121fcfee5424d"
              }
            ],
            "subnets": [
              "subnet-07c5344a8a1e0348a",
              "subnet-0cac121fcfee5424d"
            ],
            "tags": {
              "Name": "asterra-demo-alb"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-tg/4d04e3a58a9b5ce4",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-tg/4d04e3a58a9b5ce4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e9e28d4a71d10db",
            "arn": "arn:aws:ec2:us-east-1:854383975800:instance/i-0f803053e6f688633",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "asterra-demo-bastion-ssm-profile",
            "id": "i-0f803053e6f688633",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "asterra-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6434f84d8945314",
            "private_dns": "ip-10-20-1-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.56",
            "public_dns": "ec2-54-237-245-227.compute-1.amazonaws.com",
            "public_ip": "54.237.245.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f1cf95330845256d",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c5344a8a1e0348a",
            "tags": {
              "Name": "asterra-demo-bastion"
            },
            "tags_all": {
              "Name": "asterra-demo-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014dca40a0e05ac32"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:internet-gateway/igw-081a63779386b2a82",
            "id": "igw-081a63779386b2a82",
            "owner_id": "854383975800",
            "tags": {
              "Name": "asterra-demo-igw"
            },
            "tags_all": {
              "Name": "asterra-demo-igw"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb-internal/2ea2b8b87c6d261e",
            "arn_suffix": "app/asterra-demo-alb-internal/2ea2b8b87c6d261e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-asterra-demo-alb-internal-1765800408.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb-internal/2ea2b8b87c6d261e",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asterra-demo-alb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0481e65e582160065"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              },
              {
                "subnet_id": "subnet-0586bde139aa7f7f1"
              }
            ],
            "subnets": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-alb-internal"
            },
            "tags_all": {
              "Name": "asterra-demo-alb-internal"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3",
            "arn_suffix": "app/asterra-demo-alb/743834815cb59af3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "asterra-demo-alb-1269054896.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asterra-demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e9400189dded844"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c5344a8a1e0348a"
              },
              {
                "subnet_id": "subnet-0cac121fcfee5424d"
              }
            ],
            "subnets": [
              "subnet-07c5344a8a1e0348a",
              "subnet-0cac121fcfee5424d"
            ],
            "tags": {
              "Name": "asterra-demo-alb"
            },
            "tags_all": {
              "Name": "asterra-demo-alb"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_public_sg",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-tg/4d04e3a58a9b5ce4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.public",
            "aws_lb_target_group.mapserver_tg",
            "aws_security_group.alb_public_sg",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb-internal/2ea2b8b87c6d261e/bf1795aebf26c2fe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-geoproc-tg/cc983dd5791dab43",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb-internal/2ea2b8b87c6d261e/bf1795aebf26c2fe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb-internal/2ea2b8b87c6d261e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_target_group.geoproc_tg",
            "aws_security_group.alb_internal_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "wp_path_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-wp-tg/1f3cd64c49e1366f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener-rule/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd/78b6d65ae0d29fe8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/wordpress*",
                      "/wp*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener-rule/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd/78b6d65ae0d29fe8",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:listener/app/asterra-demo-alb/743834815cb59af3/8edbf04a785f22dd",
            "priority": 100,
            "tags": {
              "Name": "asterra-demo-wp-path-rule"
            },
            "tags_all": {
              "Name": "asterra-demo-wp-path-rule"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb_target_group.wp",
            "data.aws_lb_listener.http_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "geoproc_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-geoproc-tg/cc983dd5791dab43",
            "arn_suffix": "targetgroup/asterra-demo-geoproc-tg/cc983dd5791dab43",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-geoproc-tg/cc983dd5791dab43",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb-internal/2ea2b8b87c6d261e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asterra-demo-geoproc-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "asterra-demo-geoproc-tg"
            },
            "tags_all": {
              "Name": "asterra-demo-geoproc-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mapserver_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-tg/4d04e3a58a9b5ce4",
            "arn_suffix": "targetgroup/asterra-demo-tg/4d04e3a58a9b5ce4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-tg/4d04e3a58a9b5ce4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asterra-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "asterra-demo-tg"
            },
            "tags_all": {
              "Name": "asterra-demo-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-wp-tg/1f3cd64c49e1366f",
            "arn_suffix": "targetgroup/asterra-demo-wp-tg/1f3cd64c49e1366f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/wp-login.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854383975800:targetgroup/asterra-demo-wp-tg/1f3cd64c49e1366f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:854383975800:loadbalancer/app/asterra-demo-alb/743834815cb59af3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asterra-demo-wp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "asterra-demo-wp-tg"
            },
            "tags_all": {
              "Name": "asterra-demo-wp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:route-table/rtb-00908ea4f019f9155",
            "id": "rtb-00908ea4f019f9155",
            "owner_id": "854383975800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081a63779386b2a82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "asterra-demo-public-rt"
            },
            "tags_all": {
              "Name": "asterra-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e78124941b1d5322",
            "route_table_id": "rtb-00908ea4f019f9155",
            "subnet_id": "subnet-0cac121fcfee5424d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea172b889f7177cb",
            "route_table_id": "rtb-00908ea4f019f9155",
            "subnet_id": "subnet-07c5344a8a1e0348a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-0481e65e582160065",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0481e65e582160065",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "HTTP from VPC only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asterra-demo-alb-internal-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-alb-internal-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-alb-internal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-02e9400189dded844",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e9400189dded844",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asterra-demo-alb-public-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-alb-public-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-alb-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-014dca40a0e05ac32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014dca40a0e05ac32",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.125.229.223/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "asterra-demo-bastion-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-bastion-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-0a8ddc6c46332775d",
            "description": "Allow MySQL from ECS tasks",
            "egress": [],
            "id": "sg-0a8ddc6c46332775d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a4514fa98f0c13d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "asterra-demo-wp-db-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-wp-db-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-wp-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-074c6e1d5da37124e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074c6e1d5da37124e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "from internal ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0481e65e582160065"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asterra-demo-ecs-private-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-ecs-private-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-ecs-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-073380e17b524e88c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073380e17b524e88c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e9400189dded844"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asterra-demo-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-ecs-service-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-05a4514fa98f0c13d",
            "description": "ECS tasks (WordPress) to ALB/EFS/DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a4514fa98f0c13d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e9400189dded844"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asterra-demo-wp-tasks-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-wp-tasks-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-wp-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-077ea84bf3a256151",
            "description": "Allow NFS 2049 from ECS tasks",
            "egress": [],
            "id": "sg-077ea84bf3a256151",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a4514fa98f0c13d"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "asterra-demo-wp-efs-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-wp-efs-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-wp-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-0fc2c7ddd8bbcc45d",
            "description": "Lambda ENI egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc2c7ddd8bbcc45d",
            "ingress": [],
            "name": "asterra-demo-lambda-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-lambda-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-0e4e958e2d85b7f20",
            "description": "Allow Postgres from VPC CIDR only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4e958e2d85b7f20",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Postgres from inside VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "asterra-demo-rds-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-rds-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-079c252a92634ffa5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079c252a92634ffa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "asterra-demo-vpce-private-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-vpce-private-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_ssm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:security-group/sg-0bfc36cc6a5c73ac3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfc36cc6a5c73ac3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "asterra-demo-vpce-ssm-sg",
            "name_prefix": "",
            "owner_id": "854383975800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asterra-demo-vpce-ssm-sg"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-ssm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress_from_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2885501912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a8ddc6c46332775d",
            "security_group_rule_id": "sgr-087f008297980a6cb",
            "self": false,
            "source_security_group_id": "sg-05a4514fa98f0c13d",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress_from_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2604079307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077ea84bf3a256151",
            "security_group_rule_id": "sgr-0550b93d6b02bddc3",
            "self": false,
            "source_security_group_id": "sg-05a4514fa98f0c13d",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.efs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tasks_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2972041678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05a4514fa98f0c13d",
            "security_group_rule_id": "sgr-0ecdd726f8c887ead",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tasks_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-02e9400189dded844",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-247097095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a4514fa98f0c13d",
            "security_group_rule_id": "sgr-0648489ac76cf0b9d",
            "self": false,
            "source_security_group_id": "sg-02e9400189dded844",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "data.aws_lb.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:subnet/subnet-0586bde139aa7f7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0586bde139aa7f7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854383975800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asterra-demo-private-1"
            },
            "tags_all": {
              "Name": "asterra-demo-private-1"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:subnet/subnet-01ce6b1e39a94d9ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce6b1e39a94d9ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854383975800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asterra-demo-private-2"
            },
            "tags_all": {
              "Name": "asterra-demo-private-2"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:subnet/subnet-07c5344a8a1e0348a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c5344a8a1e0348a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854383975800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asterra-demo-public"
            },
            "tags_all": {
              "Name": "asterra-demo-public"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:subnet/subnet-0cac121fcfee5424d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cac121fcfee5424d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854383975800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asterra-demo-public-2"
            },
            "tags_all": {
              "Name": "asterra-demo-public-2"
            },
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc/vpc-0dd7a14c5e7f4481f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b3666b173b7b07e9",
            "default_route_table_id": "rtb-0d2b07b8ef8735052",
            "default_security_group_id": "sg-0a3c48c2cc8896876",
            "dhcp_options_id": "dopt-0867c90e3785a46ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd7a14c5e7f4481f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2b07b8ef8735052",
            "owner_id": "854383975800",
            "tags": {
              "Name": "asterra-demo-vpc"
            },
            "tags_all": {
              "Name": "asterra-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-0ea0e966003e1a61a",
            "dns_entry": [
              {
                "dns_name": "vpce-0ea0e966003e1a61a-9ce6eksn.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ea0e966003e1a61a-9ce6eksn-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ea0e966003e1a61a-9ce6eksn-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09107522JMIP8ZPR95GZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ea0e966003e1a61a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-043434835940a5b93",
              "eni-08f8440c2e5ecf0e2"
            ],
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bfc36cc6a5c73ac3"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.2.30",
                "subnet_id": "subnet-0586bde139aa7f7f1"
              },
              {
                "ipv4": "10.20.3.152",
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              }
            ],
            "subnet_ids": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-vpce-ec2messages"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_ssm_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-0d2f0fc806ae1f0b9",
            "dns_entry": [
              {
                "dns_name": "vpce-0d2f0fc806ae1f0b9-jdqlew7s.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d2f0fc806ae1f0b9-jdqlew7s-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d2f0fc806ae1f0b9-jdqlew7s-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0425643PQOHYUPZPP0C"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z096813189HFMW7OUIL5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d2f0fc806ae1f0b9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07c5f674c69e8082b",
              "eni-09b9bd8b32c1f8f35"
            ],
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-079c252a92634ffa5"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.2.111",
                "subnet_id": "subnet-0586bde139aa7f7f1"
              },
              {
                "ipv4": "10.20.3.164",
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              }
            ],
            "subnet_ids": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-vpce-ecr-api"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_private_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-00e7fc617ab113f2e",
            "dns_entry": [
              {
                "dns_name": "vpce-00e7fc617ab113f2e-ez7d8gf4.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00e7fc617ab113f2e-ez7d8gf4-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00e7fc617ab113f2e-ez7d8gf4-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z005526536Z9Z2FU37QZF"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z005526536Z9Z2FU37QZF"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z00552643DLJOZIPLPW9U"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z00552643DLJOZIPLPW9U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00e7fc617ab113f2e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0cc22bf7616df27ad",
              "eni-0d94d6aa998db5c76"
            ],
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-079c252a92634ffa5"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.2.83",
                "subnet_id": "subnet-0586bde139aa7f7f1"
              },
              {
                "ipv4": "10.20.3.99",
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              }
            ],
            "subnet_ids": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-vpce-ecr-dkr"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_private_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-03c63a52462f77d0b",
            "dns_entry": [
              {
                "dns_name": "vpce-03c63a52462f77d0b-hunwfd34.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03c63a52462f77d0b-hunwfd34-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03c63a52462f77d0b-hunwfd34-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0425043CU9R4RLLZPIK"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09675233HJ8QWA2HWSJQ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04252511DUYBDVCYR93V"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04252762K6ZQ9897FA4P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03c63a52462f77d0b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01f972cb99e92d067",
              "eni-09000f37599975d9d"
            ],
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-079c252a92634ffa5"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.2.97",
                "subnet_id": "subnet-0586bde139aa7f7f1"
              },
              {
                "ipv4": "10.20.3.23",
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              }
            ],
            "subnet_ids": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-vpce-logs"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_private_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-0772886225317f2e8",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0772886225317f2e8",
            "ip_address_type": "ipv4",
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00908ea4f019f9155",
              "rtb-0d2b07b8ef8735052"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "asterra-demo-s3-endpoint"
            },
            "tags_all": {
              "Name": "asterra-demo-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_route_tables.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-0af9fbee442ed1cf9",
            "dns_entry": [
              {
                "dns_name": "vpce-0af9fbee442ed1cf9-cap650gc.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0af9fbee442ed1cf9-cap650gc-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0af9fbee442ed1cf9-cap650gc-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0337069GJO0C0SQ1T5"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z03370688I5JJOVNE42T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0af9fbee442ed1cf9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03f78ee404581b062",
              "eni-0d2e2926d4838c48c"
            ],
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bfc36cc6a5c73ac3"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.2.204",
                "subnet_id": "subnet-0586bde139aa7f7f1"
              },
              {
                "ipv4": "10.20.3.133",
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              }
            ],
            "subnet_ids": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-vpce-ssm"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_ssm_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854383975800:vpc-endpoint/vpce-03dfec82caa32d4c3",
            "dns_entry": [
              {
                "dns_name": "vpce-03dfec82caa32d4c3-9l65xilw.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03dfec82caa32d4c3-9l65xilw-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03dfec82caa32d4c3-9l65xilw-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0662030390Q2WSCUGP89"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z066106636GYP1RP14TU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03dfec82caa32d4c3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-098da41791b290c06",
              "eni-0afb3f1a2065e7285"
            ],
            "owner_id": "854383975800",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bfc36cc6a5c73ac3"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.2.116",
                "subnet_id": "subnet-0586bde139aa7f7f1"
              },
              {
                "ipv4": "10.20.3.242",
                "subnet_id": "subnet-01ce6b1e39a94d9ff"
              }
            ],
            "subnet_ids": [
              "subnet-01ce6b1e39a94d9ff",
              "subnet-0586bde139aa7f7f1"
            ],
            "tags": {
              "Name": "asterra-demo-vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "asterra-demo-vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd7a14c5e7f4481f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_ssm_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}